Correção bug dark mode

--- a/src/Input.css
+++ b/src/Input.css
@@ -9,5 +9,6 @@ input {
     background: none;
     text-align: center;
     transition: all 0.2s ease-in-out;
+    color: white;
 }
 
